# compression_node_mt

./: CMakeLists.txt  main.cpp
alfa_pd_configs/: FCSOR_example.cfg
lib/: alfa_node.h  alfa_pd.h  color_coding.h  compression_profiles.h  compressor.h  my_octree.h  octree_pointcloud.h  octree_pointcloud_compression_2.h
src/: alfa_node.cpp  alfa_pd.cpp  compressor.cpp  my_octree.cpp  octree_pointcloud_compression_2.cpp  package.xml
src/alfa_pd_configs/: DIOR_hardware_example.cfg  DIOR_software_example.cfg  DROR_hardware_example.cfg  DROR_software_example.cfg  LIOR_hardware_example.cfg  LIOR_software_example.cfg  ROR_software_example.cfg  SOR_software_example.cfg  voxel_grid.cfg
src/lib/: CompressedPointCloud.h  alfa_node.h  entropy_range_coder.h  my_octree.h  octree_pointcloud.h  octree_pointcloud_compression_2.h
src/src/: alfa_node.cpp  compressor.cpp  entropy_range_coder.cpp  my_octree.cpp  octree_pointcloud.cpp  octree_pointcloud_compression_2.cpp
